# IrisTracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
src/: camera.cpp  camera.h  landmarksDetector.py  main.cpp  myTwoStepInferencer.cpp  myTwoStepInferencer.h  overlayDot.cpp  overlayDot.h  pythonBridge.cpp  pythonBridge.h
src/PythonHelper/: face_model_server.py
